# mbzirc_husky

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rebuild.sh  useful-commands
detector_cluster/: .gitignore  CMakeLists.txt  README.md  package.xml
detector_cluster/cfg/: detector_config.yaml
detector_cluster/include/: detector.h
detector_cluster/launch/: detector.launch  detector_bag.launch
detector_cluster/src/: detector.cpp
husky/: package.xml
husky/cfg/: spray.cfg
husky/launch/: simulate-fire.launch
husky/models/bluebrick/: bluebrick.blend  bluebrick.blend1
husky/models/greenbrick/: greenbrick.blend1  greenbrick.dae
husky/src/: CPump.h  pickup.cpp
husky/system/: tmux.sh
kinova_control_manager/: .gitignore  CMakeLists.txt  TODOLIST.txt  nodelet_plugins.xml  package.xml
kinova_control_manager/config/: j2n6s300.yaml
kinova_control_manager/launch/: control_manager.launch
kinova_control_manager/msg/: ArmStatus.msg
kinova_control_manager/src/: arm_manager.cpp  control_manager.cpp  transform_debug.cpp  velocity_control.cpp
kinova_control_manager/srv/: EndEffectorPose.srv  Vector3.srv
kinova_control_manager/tmux_scripts/: .tmuxinator.yml  just_arm_tmux.sh  session.yml
kinova_control_manager/tmux_scripts/real_arm_kinova/: session.yml
kinova_control_manager/tmux_scripts/simulation/: .tmuxinator.yml
kortex_control_manager/: CMakeLists.txt  package.xml
kortex_control_manager/config/: params.yaml
kortex_control_manager/launch/: control_manager.launch
kortex_control_manager/src/: control_manager.cpp
kortex_control_manager/tmux_scripts/: .tmuxinator.yml  session.yml
mbzirc_husky_msgs/: CMakeLists.txt  package.xml
mbzirc_husky_msgs/msg/: Gen3ArmStatus.msg  ObjectWithTypeArray.msg  brickCompleted.msg  brickGoal.msg  brickInventory.msg  brickPickedUp.msg  brickPosition.msg  wallPatternPosition.msg
mbzirc_husky_msgs/src/: main.cpp
mbzirc_husky_msgs/srv/: LowerBrick.srv  StoragePosition.srv  Vector7.srv  addInventory.srv  brickDetect.srv  farWallPatternDetect.srv  getInventory.srv  getPoi.srv  nextBrickPlacement.srv  removePoi.srv  wallPatternDetect.srv
sensor_control/: CMakeLists.txt  COMPETITION_CHECKLIST.txt  INTEGRATION_TODOLIST.txt  README.md  package.xml  todo  useful-commands
sensor_control/action/: brickExplore.action  brickPickup.action  brickRearrange.action  brickStack.action  fireExplore.action  pickup.action  spray.action
sensor_control/bricks/: bricks-difficult.txt  bricks.txt
sensor_control/cfg/: bounds.cfg  brick_pile.cfg  detectBrick.cfg  husky.rviz  symbolicMap.cfg
sensor_control/cfg/move_base/: dwa_trajectory_planner.yaml  global_costmap_params.yaml  local_costmap_params.yaml  trajectory_planner.yaml
sensor_control/cfg/move_base/brickPickup/: costmap_common_params.yaml  dwa_trajectory_planner.yaml  global_costmap_params.yaml  (+1 more)
sensor_control/config/: brickStateMachine.yaml  communication_config.yaml  uav_names.yaml
sensor_control/launch/: amcl.launch  brick.launch  brickServers.launch  brickStateMachine.launch  camerarosbag.launch  fire.launch  gmapping.launch  hector.launch  inventory.launch  laserscan.launch  laserscan.lower.launch  mapserver.launch  nimbro.launch  pathfinding.launch  pump.launch  robot.launch  rosbag.launch  simulate-bricks.launch  simulate-fire.launch  symbolicMap.launch  velodyne.launch  velodyne_converter.launch
sensor_control/launch/old/: simulate.launch.old
sensor_control/maps/: brick.yaml  romance.yaml
sensor_control/maps/ambulance/: map-waypoints.txt
sensor_control/maps/arena/: WPS_NIGHT_BEFORE.txt  map-corners.txt  map-waypoints.txt  wps.txt
sensor_control/maps/carpark/: map-waypoints.txt
sensor_control/maps/lab/: map-waypoints.txt
sensor_control/maps/tennis-3/: map-waypoints.txt
sensor_control/maps/tennis-high/: map-corners.txt  map-waypoints.txt
sensor_control/maps/tennis-left/: map-waypoints.txt
sensor_control/maps/tennis-left-2/: map-waypoints.txt
sensor_control/maps/tennis-no-bricks/: map-corners.txt  map-nogo.yaml  map-waypoints.txt
sensor_control/maps/tower/: map-corners.txt  map-waypoints.txt
sensor_control/models/: box.dae
sensor_control/msg/: symbolicMap.msg
sensor_control/scripts/: battery.py  bounds.py  brickInventory.py  brickScheduler.py  fireControl.py  joystickMagnet.py  joystickWater.py  mapPrep.py  podvod.py  podvod.sh  pointnet-data.py  pts.py  ransac-clusterer.py  ransac.py  ransac.sh  ransac_clusterer.py
sensor_control/simulation/: husky.urdf.xacro
sensor_control/simulation/fire/: createScene.py  robot
sensor_control/simulation/models/: addmodel  box.dae  mbzirc_building_walls.dae  tower.blend
sensor_control/simulation/morse/: frames.gv  husky.py.old  simbricks.py
sensor_control/src/: CRawDepthImage.cpp  CRawDepthImage.h  CSegmentation.cpp  CSegmentation.h  brickDetector.cpp  brickExplore.cpp  brickPickup.cpp  brickRearrange.cpp  brickStack.cpp  brickStateMachine.cpp  fireExplore.cpp  fireStateMachine.cpp  order.cpp  order.h  pickup.cpp  spray.cpp  symbolicMap.cpp
sensor_control/srv/: accessibleInventory.srv  brickBuilt.srv  getPoi.srv  nextBrickPlacement.srv  patternAlignement.srv  removeInventory.srv  setPoi.srv
sensor_control/system/: tmux.sh
sensor_control/system/udev/: 75-carusel-push.rules  76-carusel-rotate.rules  85-darpa-estop.rules  92-pump.rules  93-rfm69.rules
wallpattern_detection/: CMakeLists.txt  aa.txt  package.xml
wallpattern_detection/cfg/: wallpattern_detection.cfg
wallpattern_detection/etc/: aa.txt  abdulah_sunny.bin.col  correspondences.cal  correspondences.txt  farDetect.colormap  mbzirc_1.bin.col  mbzirc_our.bin.col  uu.txt
wallpattern_detection/launch/: close_calibration.launch  far_calibration.launch  mbzirc_bag.launch  rosbag.launch
wallpattern_detection/msg/: ObjectWithTypeArray.msg
wallpattern_detection/scripts/: plot.gnu  plot.sh  plotseq.sh
wallpattern_detection/src/: CSegme.cpp  CSegmentation.cpp  CSegmentation.h  CTransformation.cpp  CTransformation.h  calibration.cpp  detection.cpp  fardetection.cpp
wallpattern_detection/src/GPUCache/: index
(+63 files in other folders)
