<?xml version="1.0"?>
<package>
  <name>mbzirc_husky</name>
  <version>0.2.5</version>
  <description>Used by Husky firefighter and wallbuilder</description>

  <maintainer email="tomas.krajnik@fel.cvut.cz">gestom</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_apps</url>

  <author email="tomas.krajnik@fel.cvut.cz">gestom</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mrs_lib</build_depend>
  <build_depend>kinova_driver</build_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>kinova_control_manager</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>mrs_lib</run_depend>
  <run_depend>kinova_driver</run_depend>
  <run_depend>kinova_msgs</run_depend>
  <run_depend>kinova_control_manager</run_depend>

  <export/>
</package>
